# sage-julia-bridge

./: .envrc  .gitignore  README.md  justfile  pyproject.toml
docs/: wire-format.md
src/sage_julia_bridge/: __init__.py  errors.py  interface.py  julia_bridge.jl  mrdi.py
tests/: test_bridge.py  test_preparse_bridge.sage
