[project]
name = "sage-julia-bridge"
version = "0.1.0"
description = "Standalone Julia bridge for Sage via a long-lived subprocess"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "D. Zack Garza" }]
dependencies = ["pydantic>=2.10"]

[project.urls]
Homepage = "https://github.com/dzackgarza/sage-julia-bridge"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sage_julia_bridge"]
